Closed Bug 1061383 Opened 10 years ago Closed 10 years ago

ReturnSimdReg not defined in the non-ion backend

Categories

(Core :: JavaScript Engine: JIT, defect)

Other
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla35
Tracking Status
firefox32 --- unaffected
firefox33 --- unaffected
firefox34 --- fixed
firefox35 --- fixed

People

(Reporter: stevensn, Assigned: bbouvier)

References

Details

Attachments

(1 file)

Bug 992267 introduced usage of ReturnSimdReg in the jit/shared code but the symbol isn't defined in the none jit backend.

The MIPS backend might also need it

9:23.95 In file included from /home/buildbot/buildbot/slave/runtests/build/js/src/jit/shared/Lowering-shared.cpp:7:0,
 9:23.95                  from /home/buildbot/buildbot/slave/runtests/build/obj-powerpc64-unknown-linux-gnu/js/src/Unified_cpp_js_src6.cpp:93:
 9:23.95 /home/buildbot/buildbot/slave/runtests/build/js/src/jit/shared/Lowering-shared-inl.h: In member function ‘bool js::jit::LIRGeneratorShared::defineReturn(js::jit::LInstruction*, js::jit::MDefinition*)’:
 9:23.95 /home/buildbot/buildbot/slave/runtests/build/js/src/jit/shared/Lowering-shared-inl.h:158:74: error: ‘ReturnSimdReg’ was not declared in this scope
Flags: needinfo?(benj)
Attached patch bug1061383.patchSplinter Review
Thanks for the bug report! Does this patch solve non ion builds for you?
Assignee: nobody → benj
Status: NEW → ASSIGNED
Attachment #8482516 - Flags: review?(nicolas.b.pierron)
Flags: needinfo?(benj) → needinfo?(steve)
Attachment #8482516 - Flags: review?(nicolas.b.pierron) → review+
Yes this fixes the problem.
Tested on mozilla-aurora

Thanks
Flags: needinfo?(steve)
needinfo'ing myself to not forget that it will need uplifting -_-'
Flags: needinfo?(benj)
Comment on attachment 8482516 [details] [diff] [review]
bug1061383.patch

Approval Request Comment
[Feature/regressing bug #]: 992267
[User impact if declined]: not possible to build Spidermonkey on architecture other than x86, x64 and ARM, including but not limited to powerpc, sun, etc. 
[Describe test coverage new/current, TBPL]: local build succeeded, not tested on TBPL
[Risks and why]: no risk at all 
[String/UUID change made/needed]: n/a
Attachment #8482516 - Flags: approval-mozilla-aurora?
Flags: needinfo?(benj)
Comment on attachment 8482516 [details] [diff] [review]
bug1061383.patch

No value in waiting for this fix to hit m-c. Aurora+
Attachment #8482516 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
https://hg.mozilla.org/mozilla-central/rev/256c196dc816
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla35
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: