Bug 1061383 - Unbreak non-ion builds following Odin SIMD landing. r=nbp, a=lmandel